Added angular to Stage 1, steps 1 and 2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
         <script src="//cdn.datatables.net/1.10.5/js/jquery.dataTables.min.js"></script>
         <%= csrf_meta_tags %>
     </head>
-    <body>
+    <body ng-app="wizard-steps">
         <header>
             <nav class="navbar navbar-inverse navbar-fixed-top">
                 <div class="container">
