--- a/app/views/steps/step1_1.html.erb
+++ b/app/views/steps/step1_1.html.erb
@@ -15,6 +15,21 @@
             </div>
         </div>
     </div>
+    <div>
+        <ul ng-if="problem.id">
+            <li>
+                {{problem.title}}
+                <ul ng-if="policies.length > 0">
+                    <li ng-repeat="pp in policies">
+                        {{pp.title}}
+                        <ul ng-if="false">
+                            <li></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
     <div class="col-xs-12" ng-if="current_step == 1">
         <div class="col-md-12">
             <h3>Step 1 - Real world problem</h3>
