Minor html editing and solutions are now being listed

--- a/app/views/solutions/aside.html.erb
+++ b/app/views/solutions/aside.html.erb
@@ -1,11 +1,10 @@
 <div class="modal-header">
-    <h3 class="modal-title">ngAside</h3>
+    <h3 class="modal-title">Solutions for {{policy.title}}</h3>
 </div>
 <div class="modal-body">
-    {{policy.title}}
   <solutions-form data-policy="policy" data-problem-id="problem_id"></solutions-form>
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="ok($event)">OK</button>
-    <button class="btn btn-warning" ng-click="cancel($event)">Cancel</button>
 </div>
+{{solution.title}}
