--- a/app/views/steps/step1_1.html.erb
+++ b/app/views/steps/step1_1.html.erb
@@ -74,11 +74,6 @@
                             </div>
                             <div role="tabpanel" class="tab-pane active" id="data-entry">
                                 <!-- form init -->
-                                {{problem.title}}
-                                {{problem.description}}
-                                {{problem.focus_area}}
-                                <%= form_authenticity_token.to_s %>
-
                                 <% action_path = @real_problem.new_record? ? create_ww_real_problems_path : update_ww_real_problem_path(@real_problem) %>
                                 <%= simple_form_for(@real_problem, html: {autocomplete: "off"}, url: action_path) do |f| %>
                                 <div class="form-group">
@@ -86,7 +81,6 @@
                                 </div>
                                 
                                 <div class="form-group">
-                                    <%= f.label :description %>:
                                     <%= f.input :description, placeholder: "Enter an explanation", input_html: {"ng-model" => "problem.description"} %>
                                 </div>
 
@@ -128,15 +122,20 @@
                                 </div>
                                 <div role="tabpanel" class="tab-pane active" id="data-entry2">
                                     <div class="row">
-                                        <div class="col-md-6">
+                                        <div>
                                             <!-- form init -->
                                             <%= form_tag do %>
-                                                <%= label_tag(:title, "Title") %>
-                                                <%= text_field_tag :title, nil, {:"ng-model" => "current_policy.title"}%>
-                                                <%= label_tag(:description, "Description") %>
-                                                <%= text_field_tag :description, nil, {:"ng-model" => "current_policy.description"}%>
-                                                <%= button_tag "Add Policy Porblem", {:"ng-click" => "add_policy()", type: "button"} %>
-
+                                                <div class="form-group">
+                                                    <%= label_tag(:title, "Title") %>
+                                                    <%= text_field_tag :title, nil, {class: "form-control", :"ng-model" => "current_policy.title"}%>
+                                                </div>
+                                                <div class="form-group">
+                                                    <%= label_tag(:description, "Description") %>
+                                                    <%= text_area_tag :description, nil, {class: "form-control", :"ng-model" => "current_policy.description"}%>
+                                                </div>
+                                                <div class="form-group">
+                                                    <%= button_tag "Add Policy Porblem", {class: "btn", :"ng-click" => "add_policy()", type: "button"} %>
+                                                </div
                                             <% end %>
                                             <hr>
                                             <table class="table table-bordered">
@@ -149,7 +148,7 @@
                                               <tbody>
                                                 <tr ng-repeat="pp in policies">
                                                     <td>{{pp.title}}</td>
-                                                    <td><%= button_tag "Add Solution", {:"ng-click" => "add_solution(pp)", type: "button"}%></td>
+                                                    <td><%= button_tag "Add Solution", {class: "btn", :"ng-click" => "add_solution(pp)", type: "button"}%></td>
                                                 </tr>
                                                 <tr><td>{{current_policy.title}}</td></tr>
                                               </tbody>
