--- a/app/assets/stylesheets/steps.css.scss
+++ b/app/assets/stylesheets/steps.css.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the steps controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/*.label-taxon{
+    border-radius: 5px;
+}
+
+.wrapper{
+    vertical-align: middle;
+}
+
+.label-taxon, .wrapper{
+    display: table-cell;
+    vertical-align: middle;				
+}
+
+.taxon{
+    display: table-row;
+    overflow: hidden;
+    text-align: left;
+    border-spacing: 5px;
+}*/
