--- a/app/views/solutions/aside.html.erb
+++ b/app/views/solutions/aside.html.erb
@@ -2,7 +2,7 @@
     <h3 class="modal-title">Solutions for {{policy.title}}</h3>
 </div>
 <div class="modal-body">
-  <solutions-form data-policy="policy" data-problem-id="problem_id"></solutions-form>
+  <solutions-form data-policy="policy" data-problem-id="problem_id" data-solutions="{{solutions}}"></solutions-form>
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="ok($event)">OK</button>
