--- a/app/views/solutions/aside_form.html.erb
+++ b/app/views/solutions/aside_form.html.erb
@@ -8,7 +8,7 @@
     <%= text_field_tag :description, nil, {class: "form-control", :"ng-model" => "current_solution.description"}%>
   </div>
   <div class="form-group">
-    <%= button_tag "Add Solution", {class: "btn", :"ng-click" => "save_or_update_solution()", type: "button"} %>
+    <%= button_tag "{{solution_button_txt}}", {class: "btn", :"ng-click" => "save_or_update_solution()", type: "button"} %>
   </div>
 <% end %>
 <table class="table table-bordered">
@@ -21,7 +21,7 @@
   <tbody>
     <tr ng-repeat="solution in solutions">
         <td>{{solution.title}}</td>
-        <td><%= button_tag "Edit", {class: "btn", type: "button"}%></td>
+        <td><%= button_tag "Edit", {class: "btn", :"ng-click" => "edit_solution(solution)", type: "button"}%></td>
     </tr>
     <tr><td>{{current_solution.title}}</td></tr>
   </tbody>
