fix lists and styles

--- a/app/assets/stylesheets/steps.css.scss
+++ b/app/assets/stylesheets/steps.css.scss
@@ -2,22 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-/*.label-taxon{
-    border-radius: 5px;
+.main-title-list{
+    padding-bottom: 10px;
 }
-
-.wrapper{
-    vertical-align: middle;
-}
-
-.label-taxon, .wrapper{
-    display: table-cell;
-    vertical-align: middle;				
-}
-
-.taxon{
-    display: table-row;
-    overflow: hidden;
-    text-align: left;
-    border-spacing: 5px;
-}*/
