--- a/app/views/solutions/list.html.erb
+++ b/app/views/solutions/list.html.erb
@@ -1,5 +1,5 @@
-<ul class="wrapper" >
-    <li class="taxon" ng-repeat="solution in solutions">
-        <div class="label-taxon">{{solution.title}}</div>
+<ul>
+    <li ng-repeat="solution in solutions">
+        <div class="main-title-list">{{solution.title}}</div>
     </li>
 </ul>
